--- a/css/map.css
+++ b/css/map.css
@@ -15,45 +15,67 @@ h2 {
 }
 .row {
 	border-bottom-style:solid;
+	border-bottom-color:#ffffff;
+	border-bottom-width:1px;
+}
+.line {
+	border-bottom-style:solid;
 	border-bottom-color:#cccccc;
 	border-bottom-width:1px;
 }
-
 
 .fill {
     height: 100%;
     min-height: 100%;
 }
 
-#map{
-    margin-left: auto;
-    margin-right:auto; 
-    width: 95%;
-}
 
-.infolegend {
-    line-height: 18px;
-    width: 130px;
+.legends1 {
+    line-height: 12px;
+    width: 140px;
     color: #555;
     background-color:#ffffff;
-    padding:10px;
+    padding:5px;
 	box-shadow: 0 0 15px rgba(0,0,0,0.2);
 	border-radius: 5px;
 	opacity: 0.85;
 }
-.infolegend i {
+.legends1 i {
     width: 18px;
-    height: 18px;
+    height: 12px;
     float: left;
-    margin-right: 8px;
+    margin-right: 6px;
     opacity: 0.7;
     border-style: solid;
     border-width: 1px;
     border-color: #000000;
 }
 
+.legends2 {
+    line-height: 12px;
+    width: 140px;
+    color: #555;
+    background-color:#ffffff;
+    padding:5px;
+	box-shadow: 0 0 15px rgba(0,0,0,0.2);
+	border-radius: 5px;
+	opacity: 0.85;
+}
+.legends2 i {
+    width: 18px;
+    height: 12px;
+    float: left;
+    margin-right: 6px;
+    opacity: 0.7;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #000000;
+}
+
+
+
 p {
-    padding-left:20px;
+    padding-left:10px;
 }
 
 h3 {
