--- a/css/map.css
+++ b/css/map.css
@@ -72,6 +72,28 @@ h2 {
     border-color: #000000;
 }
 
+.legends3 {
+    line-height: 12px;
+    width: 140px;
+    color: #555;
+    background-color:#ffffff;
+    padding:5px;
+	box-shadow: 0 0 15px rgba(0,0,0,0.2);
+	border-radius: 5px;
+	opacity: 0.85;
+}
+
+.legends3 i {
+    width: 18px;
+    height: 12px;
+    float: left;
+    margin-right: 6px;
+    opacity: 0.7;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #000000;
+}
+
 
 
 p {
