--- a/css/map.css
+++ b/css/map.css
@@ -1,3 +1,13 @@
+.leaflet-control-layers-toggle{ 
+    width:auto;
+    background-position:3px 50% ;
+    padding:3px;
+    padding-left:36px;
+    text-decoration:none;
+    line-height:20px;
+
+}
+
 body {
 	font-family: 'Gotham-Light', sans-serif;
 }
